kubernetes/apps/gateway/templates/gateway-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-internal
  namespace: gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: cilium
  listeners:
    - protocol: HTTPS
      port: 443
      name: https-internal
      hostname: "*.int.blarc.my.id"
      tls:
        certificateRefs:
          - kind: Secret
            name: gateway-internal-certificate
            # Keep this for argo
            group: ''
      allowedRoutes:
        namespaces:
          from: All
